--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div id="progress-fill"></div>
   </div>
   <div id="form-container">
+    <h2 id="form-header">Digital Intake</h2>
+    <hr>
     <div id="question-area">
-      <h2>Crosby & Crosby Law - Intake Portal</h2>
-      <hr>
       <p id="intro-text">This form will help us understand your situation better. Please answer the following questions honestly.</p>
       <div id="current-question"></div>
       <div id="answer-area"></div>
